Add section style pattern

--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -33,6 +33,8 @@ $light-green: #E6EFC2;
 
 // Background Color
 $base-background-color: white;
+$light-background-color: $light-gray;
+$dark-background-color: $dark-gray;
 
 // Font Colors
 $base-font-color: $dark-gray;
