Add user authentication with devise

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -6,3 +6,11 @@ section class="section section--hero"
 section class="section section--light"
   div class="section__container"
     == t("home.introduction")
+
+h1 Splash
+
+- if user_signed_in?
+  == link_to "Sign out", destroy_user_session_path, method: :delete
+- else
+  == link_to "Sign up", new_user_registration_path
+  == link_to "Sign in", new_user_session_path
