--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,1 +1,8 @@
-h1 Splash
+section class="section section--hero"
+  div
+    h1 == t("home.company_name")
+    h5 == t("home.company_motto")
+
+section class="section section--light"
+  div class="section__container"
+    == t("home.introduction")
