Clean up generated files

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,9 +1,9 @@
 nav
   - if user_signed_in?
-    == link_to"Sign out", destroy_user_session_path, method: :delete
+    == link_to t("links.sign_out"), destroy_user_session_path, method: :delete
   - else
-    == link_to "Sign up", new_user_registration_path
-    == link_to "Sign in", new_user_session_path
+    == link_to t("links.sign_up"), new_user_registration_path
+    == link_to t("links.sign_in"), new_user_session_path
 
 section class="section section--hero"
   div
