--- a/app/views/users/registrations/edit.html.slim
+++ b/app/views/users/registrations/edit.html.slim
@@ -1,24 +1,45 @@
 section class="section"
   div class="section__container"
     h2
-      | Edit 
+      = t("headers.edit_registration")
       = resource_name.to_s.humanize
-    = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+
+    = simple_form_for( \
+        resource,
+        as: resource_name,
+        url: registration_path(resource_name),
+        html: { method: :put },
+      ) do |f|
       = f.error_notification
       .form-inputs
         = f.input :email, required: true, autofocus: true
         - if devise_mapping.confirmable? && resource.pending_reconfirmation?
           p
-            | Currently waiting confirmation for: 
+            = t("copy.awaiting_email_confirmation")
             = resource.unconfirmed_email
-        = f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false
+        = f.input( \
+            :password,
+            autocomplete: "off",
+            hint: t("simple_form.hints.leave_blank"),
+            required: false,
+          )
         = f.input :password_confirmation, required: false
-        = f.input :current_password, hint: "we need your current password to confirm your changes", required: true
+        = f.input( \
+          :current_password,
+          hint: t("simple_form.hints.need_password"),
+          required: true,
+        )
       .form-actions
-        = f.button :submit, "Update"
+        = f.button :submit, t("buttons.update")
+
     h3
-      | Cancel my account
+      = t("headers.cancel_account")
     p
-      | Unhappy? 
-      = link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete
-    = link_to "Back", :back
+      = t("copy.unhappy")
+      = link_to( \
+          t("links.cancel_account"),
+          registration_path(resource_name),
+          data: { confirm: t("copy.confirm") },
+          method: :delete,
+        )
+    = link_to t("links.back"), :back
