--- a/app/views/users/registrations/new.html.slim
+++ b/app/views/users/registrations/new.html.slim
@@ -1,13 +1,24 @@
 section class="section"
   div class="section__container"
     h2
-      | Sign up dude
-    = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = t("headers.sign_up")
+    = simple_form_for( \
+      resource,
+      as: resource_name,
+      url: registration_path(resource_name) \
+    ) do |f|
       = f.error_notification
       .form-inputs
         = f.input :email, required: true, autofocus: true
-        = f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable)
+        = f.input( \
+          :password,
+          required: true,
+          hint: t( \
+            "simple_form.hints.password",
+            minimum: @minimum_password_length,
+          ),
+        )
         = f.input :password_confirmation, required: true
       .form-actions
-        = f.button :submit, "Sign up"
+        = f.button :submit, t("buttons.sign_up")
     = render "users/shared/links"
