--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,7 @@ html
     == stylesheet_link_tag :application, media: "all"
     == csrf_meta_tags
   body.body_class class="#{body_class}"
+    == render "header"
     == render "flashes"
     == yield
     == render "javascript"
