--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,5 +5,6 @@
 @import "base/grid-settings";
 @import "neat";
 @import "base/base";
+@import "library/base";
 @import "patterns/base";
 @import "refills/flashes";
