--- a/app/assets/stylesheets/patterns/_section.scss
+++ b/app/assets/stylesheets/patterns/_section.scss
@@ -1,4 +1,5 @@
 .section {
+  position: relative;
   width: 100%;
 }
 
@@ -9,6 +10,11 @@
   justify-content: center;
   min-height: em(300);
   text-align: center;
+
+  h1,
+  h5 {
+    color: $light-header-color;
+  }
 }
 
 .section--light {
