--- a/app/views/users/passwords/new.html.slim
+++ b/app/views/users/passwords/new.html.slim
@@ -13,4 +13,5 @@ section class="section"
         = f.input :email, required: true, autofocus: true
       .form-actions
         = f.button :submit, t("buttons.new_password"), class: "button"
-    = render "users/shared/links"
+    = link_to t("links.sign_in"), new_session_path(resource_name)
+    = link_to t("links.sign_up"), new_registration_path(resource_name)
