--- a/app/assets/stylesheets/patterns/_section.scss
+++ b/app/assets/stylesheets/patterns/_section.scss
@@ -4,10 +4,7 @@
 }
 
 .section--hero {
-  align-items: center;
-  display: flex;
-  height: 50vh;
-  justify-content: center;
+  padding: 20vh 0;
   min-height: em(300);
   text-align: center;
 
