--- a/app/views/businesses/show.html.slim
+++ b/app/views/businesses/show.html.slim
@@ -1,2 +1,4 @@
-h1
-  = @business.name
+div class="section"
+  div class="section__container section__container--medium"
+    h1
+      = @business.name
