--- a/app/views/homes/show.html.slim
+++ b/app/views/homes/show.html.slim
@@ -1,1 +1,4 @@
-= link_to t("links.new_business"), new_business_path
+div class="section"
+  div class="section__container section__container--medium"
+
+    = link_to t("links.new_business"), new_business_path, class: "button"
