--- a/app/views/users/registrations/new.html.slim
+++ b/app/views/users/registrations/new.html.slim
@@ -1,5 +1,5 @@
 section class="section"
-  div class="section__container"
+  div class="section__container section__container--medium"
     h2
       = t("headers.sign_up")
     = simple_form_for( \
