--- a/app/views/users/passwords/new.html.slim
+++ b/app/views/users/passwords/new.html.slim
@@ -1,5 +1,5 @@
 section class="section"
-  div class="section__container"
+  div class="section__container section__container--medium"
     h2
       == t("headers.new_password")
     = simple_form_for( \
