--- a/app/views/users/registrations/edit.html.slim
+++ b/app/views/users/registrations/edit.html.slim
@@ -1,5 +1,5 @@
 section class="section"
-  div class="section__container"
+  div class="section__container section__container--medium"
     h2
       = t("headers.edit_registration")
       = resource_name.to_s.humanize
