--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -80,3 +80,4 @@ $base-padding: 1em;
 $base-button-padding: 0.75em;
 $base-section-padding: $base-padding * 6;
 $base-button-padding: 0.75em;
+$base-margin: 1em;
