Change hero background image to solid color

--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -39,6 +39,7 @@ $white: #fff;
 $base-background-color: #fff;
 $light-background-color: $light-gray;
 $dark-background-color: $dark-gray;
+$hero-background-color: #484a5a;
 
 // Font Colors
 $base-font-color: $dark-gray;
