--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -25,12 +25,12 @@ $base-z-index: 0;
 
 // Colors
 $black: #000;
-$blue: #477DCA;
+$blue: #477dca;
 $dark-gray: #333;
 $light-gray: #f2f2f2;
-$light-green: #E6EFC2;
-$light-red: #FBE3E4;
-$light-yellow: #FFF6BF;
+$light-green: #e6efc2;
+$light-red: #fbe3e4;
+$light-yellow: #fff6bf;
 $medium-gray: #999;
 $mint-green: #75eea6;
 $white: #fff;
